--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # Project exclude paths
 /target/
+
+# --------------------------------------
+# idea
+# --------------------------------------
+.idea/
+*.eml
+*.iml
+*.ipr
+*.iws
