--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.3.1.RELEASE</version>
+            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -114,6 +114,20 @@
             <version>3.3.8.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- enigma -->
+<!--        <dependency>-->
+<!--            <groupId>com.github.yingzhuo</groupId>-->
+<!--            <artifactId>enigma</artifactId>-->
+<!--            <version>[1.0.0,)</version>-->
+<!--        </dependency>-->
+
+        <!--carnival-nonce-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.yingzhuo</groupId>-->
+<!--            <artifactId>carnival-spring-boot-starter-nonce</artifactId>-->
+<!--            <version>1.6.29</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
